--- a/project/index.html
+++ b/project/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="https://ik.imagekit.io/5ddohnvo2/logo%202.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CMS Yoga Wellness Platform</title>
+    <title>Sree Pranavam Yoga Vidyapeedom</title>
     <meta property="og:image" content="https://bolt.new/static/og_default.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
